src/app/index.scss
/**
 *  Do not remove the comment below. It's the markers used by wiredep to inject
 *  sass dependencies when defined in the bower.json of your dependencies
 */
// bower:scss
// endbower

@import "vendor/sanitize.scss";
@import "listings.scss";
@import "variables.scss";
@import "mixins.scss";

html {
  font-family: $font-brand;
}

body {
  background-color: #fff;
  margin: 0;
  width: 100%;
  font-family: $font-brand;
  font-size: .8vw;
}

strong, b {
  font-weight: 700
}

a {
  color: inherit;
}

#contact-us {
  background-image: url(../images/contact-map.jpg);
  width: 100%;
  height: 500px;
  color: $grey;
  .contact-content {
    width: 42%;
    position: relative;
    top: 85px;
    left: 297px;
    .contact-header {
      font-size: 2.2em;
      background-color: white;
      padding: 30px;
    }
    .contact-body {
      background: rgba(255, 255, 255, 0.6);
      padding: 53px;
      > ul {
        list-style-type: none;
        margin: 0;
      }
    }
  }
}

.black {
  color: black;
}
.left {
  float: left;
  width: 49%;
  padding-right: 15px;
}

.right {
  float: right;
  width: 49%;
  padding-left: 1px;
}

.property-slideshow {
  padding-top: 12px;
}

.preview-contents {
  padding: 8px;
}

.preview-map {
  width: 230px;
  position: absolute;
  margin-top: -30px;

}

.preview-title {
  color: white;
  font-size: 1.5em;
  position: absolute;
  margin-top: -65px;
  margin-left: 31px;
}

.medium-white-text {
  color: white;
  font-size: 1.5em;
}

.medium-white-text {
  color: white;
  font-size: 1.2em;
  opacity: .95;
}

.preview-text {
  font-size: .75em;
  font-weight: lighter;
  color: #858585;
}

#home-image {
  vertical-align: middle;
}

.header-overlap {
  margin-top: -35px;
  background-color: white;
}

.logo-upper-left {
  position: absolute;
  top: 35px;
  left: 35px;
  width: 278px;
  height: auto;
  z-index: 2;
}

.ham-menu {
  background-color: white;
  background-image: url(../images/ham-menu.png);
  background-size: 40%;
  background-position: center center;
  background-repeat: no-repeat;
  height: 5em;
  width: 6em;
  padding: 2em;
  cursor: pointer;
  z-index: 2;
  position: absolute;
  right: 0;
  top: 0;
}

.nav-modal {
  display: none;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: white;
  z-index: 10;
  text-align: center;
  .inner {
    padding: 15px;
    position: relative;
    .modal-logo {
      width: 18%;
      position: absolute;
      top: 15px; left: 15px;
    }
    .menu-close {
      @include close-button;
    }

    ul.nav {
      padding-top: 8%;
      list-style: none;
      font-size: 2em;
      text-align: center;
      margin: 0;
      li a {
	display: block;
	color: #888;
	line-height: 2;
	font-size: 0.8em;
	text-decoration: none;
	&.active {color: $primary-color;}
      }
    }

  }
}

.col-medium {
  width: 45%;
  font-family: $font-brand;
  color: #b4b3b3;
  letter-spacing: 0.5px;
  color: #858585;
  overflow: hidden;
}

.property-preview {
  background-image: url(../images/carousel/property-preview-background.jpg);
  width: 28%;
  height: 350px;
  margin: 22px;
  font-family: $font-brand;
  font-weight: lighter;
  margin: 25px 42px;
  opacity: .4;
  &.selected {
    transform: scale(1.3);
    opacity: 1;
    position: relative;
    z-index: 4;
  }
}

.preview-header {
  height: 50%;
  width: 100%;
}

.padding-80 {
  padding: 80px;
}

#header-home {
  background-image: url(../images/background.png);
  text-align: center;
  height: 760px;
}

#header-content {
  padding-top: 17%;
}

#header-logo {
  height: 30px;
}

.scroll-arrow {
  width: 34px;
  padding-top: 5%;
}

#header-text {
  font-family: $font-brand;
  color: #858585;
  padding-top: 8px;
}

#item-top {
  margin-top: -442px;
  background-color: $background-color;
}

.section-header {
  font-family: $font-brand;
  color: #b4b3b3;
  letter-spacing: 0.5px;
  color: #858585;
  font-size: 125%;
}

.flexbox {
  display: flex;
  flex-direction: row;
  flex-flow: row wrap;
  justify-content: center;
  margin: 0 auto;
  max-width: 1800px;
}

.flexbox-full {
  display: flex;
  flex-direction: row;
  flex-flow: row wrap;
}

.item {
  width: $col-width;
  margin: 16px;
}

.logo-small {
  height: $logo-small;
  margin-bottom: 4px;
}

.image-medium {
  height: $medium-image-height;
}

.title {
  letter-spacing: $title-letter-spacing;
  font-weight: lighter;
}

.img-responsive {
	display: block;
	max-width: 100%;
}

.horizontal-break {
  background-color: $primary-color-darker;
  color: white;
  text-align: center;
  font-size: 1.5em;
  padding: 20px 12px;
}

.learn-more {
  max-width: 35%;
}

.padded-text {
  padding: 25px;
  opacity: .9;
}

.services-info {
  width: 58%;
  color: white;
  > .flexbox {
    height: 70%;
  }
  > .header {
    height: 100px;
    padding-top: 45px;
    background-color: $primary-color;
    font-size: 2em;
    > p {
      padding: 16px;
      margin: 0;
      font-size: .75em;
      opacity: .82;
      line-spacing: 1.5;
    }
  }
}

.services-img {
  width: 42%;
  > img {
    height: 400px;
    width: 100%;
  }
}

.tennant-rep {
  float: left;
  width: 50%;
  height: 300px;
  overflow: scroll;
  background-color: $primary-color-darker-darker;
}

.landlord-rep {
  float: right;
  width: 50%;
  height: 300px;
  overflow: scroll;
  background-color: $primary-color-lighter;
}

#footer {
  position: relative;
  background: $primary-color;
  padding: 2%;
  padding-bottom: 10%;
  color: white;
  & > * { line-height: 2.2; }
  .column {
    font-size: 1.2em;
    display: inline-block;
    vertical-align: top;
    margin-right: 5%;
    .title {font-weight: bold}
    opacity: .9;
    a {
      text-decoration: none;
      color: inherit;
      display: block;
      opacity: .85;
      font-size: 85%;
      img {
	color: white;
	width: 1em;
      }
    }
    &.copyright {
      display: block;
      padding-top: 30px;
      opacity: .7;
    }
    &.social {
      float: right;
      margin-right: 0;
      font-size: 1.5em;
      text-align: right;
      line-height: 1;
      a {padding: 0.5em;}
    }
  }
}

.icon-small {
  width: 38px;
  margin-right: 15px;
}

#listings-arrow-left {
  left: -158px;
  top: 66px;
}

#listings-arrow-right {
  left: 374px;
  top: 66px;
}

.listings-arrow {
  position: absolute;
  width: 300px;
}

.simple-close {
  z-index: 10;
  cursor: pointer;
  @include close-button;
}

@media screen and (max-width: $breakpoint-medium) {
  &.listings-arrow {
    display: none;
  }

  .property-preview {
    width: 69%;
    opacity: 1;
    position: relative;
    font-size: 1.3em;
    overflow: scroll;
    &.selected {
      transform: scale(1);
    }
  }
}
@media screen and (max-width: $breakpoint-small) {
  .ham-menu {
    font-size: 4em;
  }

  .nav-modal {
    .inner {
      .modal-logo {
        width: 36%;
      }
      ul.nav {
        margin-top: 42px;
      }
    }
  }
  .nav-modal {
    font-size: 5em;
  }
  .logo-upper-left {
    width: 46%;
    top: 18px;
    left: 14px;
  }

  .services-img {
    display: none;
  }

  .property-preview {
    width: 90%;
    font-size: 1em;
  }

  #header-home {
   background-color: white;
   background-image: none;
   height: 250px;
  }

  .col-medium {
    width: 80%;
  }

  .padding-80 {
    padding: 10px;
  }

  .header-overlap {
    margin-top: 0;
  }

  #content {
    top: 1062px;
  }

  #listings-content {
    margin-top: -1145px;
  }

  .nav {
    > li {
      display: block;
    }
  }

  #listings-sidebar {
    width: 90%;
  }

  #listings-info {
    width: 90%;
  }

  .ham-menu {
    height: 2em;
    width: 2em;
  }

  .services-info {
    width: 100%;
  }

  #contact-us {
    background-color: white;
    background-image: none;
    height: 340px;
    .contact-content {
      width: 100%;
      top: 0;
      left: 0;
      font-size: 1.2em;
      .contact-header {
        text-align: center;
      }
      .contact-body {
        padding: 0;
        > ul {
          padding-left: 20px;
          font-size: .75em;
        }
      }
    }
  }
  #footer {
    position: relative;
    background: $primary-color;
    padding: 2%;
    padding-bottom: 20%;
    color: white;
    font-size: 4em !important;
    & > * { line-height: 2.2; }
    .column {
      font-size: 1.2em;
      display: block;
      margin-right: 5%;
      .title {font-weight: bold}
      margin-left: 5%;
      opacity: .9;
      &.copyright {
        margin-top: 30px;
      }
      &.social {
        margin: 0;
        display: block;
        float: left;
        > a {
          float: left;
          font-size: 1.5em;
          padding-right: 2px;
        }
      }
      a {
        text-decoration: none;
        color: inherit;
        display: block;
        opacity: .85;
        img {
          color: white;
          width: 1em;
        }
      }
    }
  }
}
/**
 *  Do not remove the comment below. It's the markers used by gulp-inject to inject
 *  all your sass files automatically
 */
// injector
// endinjector

